Combine tile modes when tiling via arrow keys

It takes some effort for the human processing unit (aka brain) to combine
quarter tile modes with other tile modes.

This change allows only half tile modes to be combined with other modes,
it is easier to comprehend and it produces fewer unexpected results.

BUG: 501731